--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -9,6 +9,7 @@
 
 /* BLOCKS */
 // SUPPORTIVE
+@import "./blocks/container.scss";
 @import "./blocks/primary-title.scss";
 @import "./blocks/primary-button.scss";
 @import "./blocks/primary-slider-button.scss";
@@ -16,6 +17,7 @@
 
 // STRUCTURE
 @import "./blocks/header.scss";
+@import "./blocks/page-main.scss";
 @import "./blocks/main-nav.scss";
 @import "./blocks/main-footer.scss";
 
@@ -32,6 +34,8 @@
 
 // SUBBLOCKS
 @import "./blocks/logo.scss";
+@import "./blocks/burger.scss";
+@import "./blocks/overlay.scss";
 @import "./blocks/promo-slide.scss";
 @import "./blocks/tour-slide.scss";
 @import "./blocks/trainer-card.scss";
