Вёрстка header desktop

--- a/source/sass/blocks/burger.scss
+++ b/source/sass/blocks/burger.scss
@@ -8,6 +8,10 @@
   color: $base-light;
   background-color: transparent;
   cursor: pointer;
+
+  @media (min-width: $desktop-width) {
+    display: none;
+  }
 }
 
 .burger__open-icon {
