--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -3,6 +3,16 @@
   padding-bottom: 15px;
   color: $base-light;
   background-color: $base-accent;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 32px;
+    padding-bottom: 32px;
+  }
 }
 
 .header__container {
@@ -15,9 +25,13 @@
     gap: 0;
     align-items: center;
   }
+
+  @media (min-width: $desktop-width) {
+    grid-template-columns: 205px 1fr 190px;
+  }
 }
 
-// .header__burger-button {}
+.header__burger-button {}
 
 .header__logo {
   @media (min-width: $tablet-width) {
@@ -32,6 +46,11 @@
 
   @media (min-width: $tablet-width) {
     grid-row: 2/3;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 2/3;
+    grid-row: 1/2;
   }
 }
 
