--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -14,8 +14,9 @@
   }
 
   @media (min-width: $desktop-width) {
+    display: block;
     font-weight: 400;
-    text-transform: capitalize;
+    text-transform: unset;
     letter-spacing: normal;
   }
 }
@@ -34,6 +35,13 @@
     gap: 26px;
     margin-top: 50px;
     margin-bottom: 70px;
+  }
+
+  @media (min-width: $desktop-width) {
+    flex-direction: row;
+    justify-content: center;
+    margin: 0;
+    gap: 30px;
   }
 }
 
