--- a/source/sass/blocks/promo-slide.scss
+++ b/source/sass/blocks/promo-slide.scss
@@ -1,15 +1,106 @@
 .promo-slide {
+  position: relative;
   color: $base-light;
+  text-align: center;
   background-color: $burger-overlay;
+
   @include font-set(15px, 20px, 400);
 
   @media (min-width: $tablet-width) {
     font-size: 17px;
     line-height: 24px;
   }
+
+  @media (min-width: $desktop-width) {
+    text-align: start;
+  }
+}
+
+.promo-slide__container {
+  position: relative;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  min-height: 568px;
+  padding-top: 40px;
+  padding-bottom: 56px;
+
+  @media (min-width: $tablet-width) {
+    min-height: 1034px;
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-height: 800px;
+    padding-top: 200px;
+    padding-bottom: 80px;
+  }
+}
+
+.promo-slide__container--kamchatka {
+  @media (min-width: $tablet-width) {
+    justify-content: start;
+
+    &::after {
+      content: "";
+      display: block;
+      width: 442px;
+      height: 365px;
+      margin-top: 45px;
+      align-self: center;
+      background-image: url("../../img/decoration/photocards-m.png");
+      background-size: contain;
+      background-repeat: no-repeat;
+
+      @supports (background-image: url("../../img/decoration/photocards-m.webp")) {
+        background-image: url("../../img/decoration/photocards-m.webp");
+      }
+
+      @media (resolution >=2dppx) {
+        background-image: url("../../img/decoration/photocards-x2-m.png");
+
+        @supports (background-image: url("../../img/decoration/photocards-x2-m.webp")) {
+          background-image: url("../../img/decoration/photocards-x2-m.webp");
+        }
+      }
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    position: relative;
+
+    &::after {
+      position: absolute;
+      top: 187px;
+      right: 120px;
+      width: 410px;
+      height: 459px;
+      margin-top: 0;
+      background-image: url("../../img/decoration/photocards-m.png");
+      background-size: contain;
+      background-repeat: no-repeat;
+
+      @supports (background-image: url("../../img/decoration/photocards-m.webp")) {
+        background-image: url("../../img/decoration/photocards-m.webp");
+      }
+
+      @media (resolution >=2dppx) {
+        background-image: url("../../img/decoration/photocards-x2-m.png");
+
+        @supports (background-image: url("../../img/decoration/photocards-x2-m.webp")) {
+          background-image: url("../../img/decoration/photocards-x2-m.webp");
+        }
+      }
+    }
+  }
 }
 
 .promo-slide h2 {
+  margin: 0;
+  margin-bottom: 15px;
+
   @include font-set(26px, 26px, 800);
 
   @media (min-width: $tablet-width) {
@@ -18,16 +109,96 @@
   }
 
   @media (min-width: $desktop-width) {
+    max-width: 945px;
+    margin-bottom: 25px;
     font-size: 77px;
     line-height: 77px;
   }
 }
 
-// .promo-slide p {}
-// .promo-slide__link {}
-.promo-slide__about-list {
-  @include list-default;
-  @include font-set(12px, 16px, 400);
+.promo-slide__container--kamchatka h2 {
+  @media (min-width: $desktop-width) {
+    max-width: 806px;
+  }
 }
 
-// .promo-slide__about-item {}
+.promo-slide p {
+  margin: 0;
+  margin-bottom: 60px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 35px;
+  }
+
+  @media (min-width: $desktop-width) {
+    max-width: 464px;
+  }
+}
+
+.promo-slide__link {
+  align-self: center;
+
+  @media (min-width: $desktop-width) {
+    align-self: start;
+  }
+}
+
+.promo-slide__about-list {
+  display: none;
+
+  @include list-default;
+  @include font-set(12px, 16px, 400);
+
+  @media (min-width: $desktop-width) {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-top: auto;
+  }
+}
+
+.promo-slide__about-item {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 14px 20px;
+  color: $base-light;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+
+  &::before {
+    content: "";
+    display: block;
+    width: 12px;
+    height: 12px;
+    background-repeat: no-repeat;
+    background-position: center;
+  }
+}
+
+.promo-slide__about-item:first-child {
+  &::before {
+    background-image: url("/__spritemap#sprite-moon-view");
+  }
+}
+
+.promo-slide__about-item:nth-child(2) {
+  &::before {
+    background-image: url("/__spritemap#sprite-hero-level-view");
+  }
+}
+
+.promo-slide__img-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1;
+}
+
+.promo-slide__img-wrapper img {
+  object-fit: cover;
+  object-position: center;
+  height: 100%;
+  max-width: 100%;
+  min-width: 100%;
+}
