--- a/source/sass/blocks/promo-slide.scss
+++ b/source/sass/blocks/promo-slide.scss
@@ -18,13 +18,14 @@
 
 .promo-slide__container {
   position: relative;
-  z-index: 2;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   justify-content: center;
   min-height: 568px;
   padding-top: 40px;
   padding-bottom: 56px;
+
 
   @media (min-width: $tablet-width) {
     min-height: 1034px;
@@ -192,7 +193,9 @@
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1;
+  bottom: 0;
+  z-index: 0;
+  overflow: hidden;
 }
 
 .promo-slide__img-wrapper img {
