--- a/source/sass/blocks/tour-slide.scss
+++ b/source/sass/blocks/tour-slide.scss
@@ -1,32 +1,171 @@
 .tour-slide {
+  position: relative;
+  padding: 224px 20px 30px;
   color: $base-light;
   background-color: $burger-overlay;
+
   @include font-set(12px, 12px, 500);
+
+  @media (min-width: $tablet-width) {
+    width: 330px;
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 380px;
+  }
 }
 
-// .tour-slide__about-list {}
+.tour-slide__text-content {
+  position: relative;
+  z-index: 1;
+}
 
-// .tour-slide__about-item {}
+.tour-slide__about-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0;
+  margin-bottom: 15px;
+}
+
+.tour-slide__description-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 14px;
+}
+
 .tour-slide__description {
-  &--location {
-    background-color: $base-accent;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+  padding: 8px 0;
+  margin: 0;
+
+  &::before {
+    content: "";
+    display: block;
+    width: 20px;
+    height: 20px;
+    background-repeat: no-repeat;
+    background-position: center;
   }
-  // &--days {}
-  // &--nights {}
+
+  &--location {
+    gap: 6px;
+    padding-left: 12px;
+    padding-right: 12px;
+    background-color: $base-accent;
+
+    &::before {
+      background-size: 9px 12px;
+      background-image: url("/__spritemap#sprite-pin-location-view");
+    }
+  }
+
+  &--days {
+    &::before {
+      background-size: 20px 20px;
+      background-image: url("/__spritemap#sprite-sun-view");
+    }
+  }
+
+  &--nights {
+    &::before {
+      background-size: 16px 16px;
+      background-image: url("/__spritemap#sprite-moon-view");
+    }
+  }
 }
 .tour-slide__title {
+  margin: 0;
+  margin-bottom: 15px;
+
   @include font-set(24px, 28px, 700);
 }
 
-// .tour-slide__requirements-list {}
+.tour-slide__requirements-list {
+  position: relative;
+  display: flex;
+  gap: 8px;
+  margin: 0;
+  padding-top: 15px;
 
-// .tour-slide__requirements-item {}
+  &::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 80px;
+    height: 1px;
+    background-color: $base-light;
+    opacity: 0.2;
+  }
+
+  @media (min-width: $tablet-width) {
+    gap: 27px;
+  }
+
+  @media (min-width: $desktop-width) {
+    gap: 52px;
+  }
+}
+
+.tour-slide__requirements-item {
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+}
 
 .tour-slide__requirement-term {
   font-weight: 300;
 }
 
 .tour-slide__requirement {
+  margin: 0;
   font-weight: 700;
-  // &--difficulty {}
+
+  &--difficulty {
+    display: flex;
+    height: 16px;
+    width: 84px;
+    --count-star: 1;
+
+    &::before,
+    &::after {
+      content: "";
+      display: block;
+      background-repeat: space;
+      background-size: 16px 16px;
+    }
+
+    &::before {
+      width: calc(var(--count-star) * 16px);
+      background-image: url("/__spritemap#sprite-fill-star-view");
+    }
+
+    &::after{
+      flex-grow: 1;
+      background-image: url("/__spritemap#sprite-empty-star-view");
+    }
+  }
+}
+
+.tour-slide__img-wrapper {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 0;
+  overflow: hidden;
+}
+
+.tour-slide__img-wrapper img {
+  object-fit: cover;
+  object-position: center;
+  height: 100%;
+  max-width: 100%;
+  min-width: 100%;
 }
