--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -1,25 +1,105 @@
-.about {
-  @media (min-width: $desktop-width) {
+// .about {}
+
+.about__container {
+  padding-top: 20px;
+  padding-bottom: 20px;
+
+  @media (min-width: $tablet-width) {
+    display: grid;
+    grid-template-columns: 1fr 270px;
+
+    padding-top: 60px;
+    padding-bottom: 40px;
+  }
+
+    @media (min-width: $desktop-width) {
+    grid-template-columns: 1fr 660px;
+    padding-top: 145px;
+    padding-bottom: 100px;
+
     font-size: 14px;
     line-height: 22px;
   }
 }
-// .about__container {}
-.about h2 {
-  @include font-set(22px, 22px, 800);
+
+.about__photo {
+  width: 100vw;
+  margin-bottom: 16px;
+  margin-left: calc(-1 * (((100vw - $mobile-width) / 2) + 15px));
+  margin-right: -15px;
+  overflow: hidden;
 
   @media (min-width: $tablet-width) {
+    align-self: center;
+    margin: 0;
+    min-width: 450px;
+    margin-left: calc(-1 * (((100vw - $tablet-width) / 2) + 45px));
+    max-width: calc((100vw - 270px - 45px) - (100vw - $tablet-width) / 2);
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-left: calc(-1 * (((100vw - $desktop-width) / 2) + 120px));
+    max-width: calc((100vw - 660px - 120px) - (100vw - $desktop-width) / 2);
+  }
+}
+
+.about__photo img {
+  object-fit: cover;
+  object-position: left;
+  min-width: 400px;
+
+  @media (min-width: $tablet-width) {
+    min-width: 100%;
+  }
+}
+
+.about h2 {
+  position: relative;
+  margin: 0;
+  margin-bottom: 42px;
+
+  @include font-set(22px, 22px, 800);
+
+  &::before {
+    content: "Авава";
+    position: absolute;
+    left: 0;
+    bottom: 12px;
+    color: $base-dark;
+    opacity: 0.03;
+
+    @include font-set(26px, 26px, 800);
+  }
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 46px;
+
     font-size: 25px;
     line-height: 25px;
+
+    &::before {
+      font-size: 40px;
+      line-height: 40px;
+      bottom: 2px;
+    }
   }
 
   @media (min-width: $desktop-width) {
     font-size: 35px;
     line-height: 35px;
+
+    &::before {
+      font-size: 55px;
+      line-height: 55px;
+      bottom: 0;
+    }
   }
 }
 
-.about  h3 {
+.about h3 {
+  margin: 0;
+  margin-bottom: 15px;
+
   @include font-set(16px, 16px, 700);
 
   @media (min-width: $tablet-width) {
@@ -33,4 +113,10 @@
   }
 }
 
-// .about p {}
+.about p {
+  margin: 0;
+
+  &:not(:last-child) {
+    margin-bottom: 25px;
+  }
+}
