--- a/source/sass/blocks/training.scss
+++ b/source/sass/blocks/training.scss
@@ -1,44 +1,214 @@
 // .training {}
-// .training__container {}
-// .training__title {}
-// .training p {}
-
-.training__subtitle {
-  @include font-set(16px, 16px, 700);
+.training__container {
+  padding-top: 36px;
+  padding-bottom: 20px;
 
   @media (min-width: $tablet-width) {
-    font-size: 18px;
-    line-height: 18px;
+    padding-top: 60px;
+    padding-top: 40px;
   }
 
   @media (min-width: $desktop-width) {
-    font-size: 21px;
-    line-height: 21px;
+    padding-top: 59px;
   }
 }
 
-// .training__swiper {}
+.training__title {
+  margin-bottom: 35px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 36px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 38px;
+  }
+}
+
+.training p {
+  margin: 0;
+  margin-bottom: 25px;
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 56px;
+  }
+}
+
+.training__subtitle {
+  margin: 0;
+  margin-bottom: 25px;
+
+  @include font-set(16px, 16px, 700);
+
+  &:first-of-type {
+    @include font-set(22px, 22px, 800);
+  }
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 104px;
+
+    font-size: 18px;
+    line-height: 18px;
+
+    &:first-of-type {
+      margin-bottom: 30px;
+
+      font-size: 25px;
+      line-height: 25px;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 23px;
+
+    font-size: 21px;
+    line-height: 21px;
+
+    &:first-of-type {
+      margin-bottom: 20px;
+
+      font-size: 35px;
+      line-height: 35px;
+    }
+  }
+}
+
+.training__swiper {
+  margin-bottom: 25px;
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 56px;
+  }
+}
+
 // .training__button {
-  // &--prev {}
-  // &--next {}
+// &--prev {}
+// &--next {}
 // }
 // .training__swiper-wrapper {}
 // .training__slide {}
+
 .training__process-list {
+  position: relative;
+  display: grid;
+  gap: 25px;
+
   font-size: 12px;
   line-height: 18px;
 
   @include list-default;
 
+  &::before {
+    position: absolute;
+    top: 11px;
+    left: 6px;
+    content: "";
+    display: block;
+    width: 2px;
+    height: calc(100% - 22px);
+    background-color: $base-accent;
+  }
+
   @media (min-width: $tablet-width) {
+    grid-template-columns: 232px 272px;
+    gap: 104px 174px;
+
     font-size: 14px;
     line-height: 22px;
+
+    &::before {
+      display: none;
+    }
   }
 
   @media (min-width: $desktop-width) {
+    grid-template-columns: repeat(4, 254px);
+    gap: 0;
     font-size: 16px;
     line-height: 24px;
+
+    &::before {
+      display: block;
+      top: unset;
+      bottom: 13px;
+      left: 20px;
+      height: 2px;
+      width: calc(100% - 20px);
+    }
   }
 }
 
-// .training__process-item {}
+.training__process-item {
+  position: relative;
+  display: flex;
+  flex-grow: 0;
+  flex-shrink: 0;
+  gap: 11px;
+  padding-left: 29px;
+
+  &::before {
+    content: "";
+    flex-grow: 0;
+    flex-shrink: 0;
+    display: block;
+    width: 25px;
+    height: 25px;
+
+    background-size: 25px 25px;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+  &:first-child::before {
+    background-image: url("/__spritemap#sprite-map-view");
+  }
+
+  &:nth-child(2)::before {
+    background-image: url("/__spritemap#sprite-boot-view");
+  }
+
+  &:nth-child(3)::before {
+    background-image: url("/__spritemap#sprite-wood-view");
+  }
+
+  &:nth-child(4)::before {
+    background-image: url("/__spritemap#sprite-mountain-view");
+  }
+
+  &::after {
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translate(0, -50%);
+    content: "";
+    flex-grow: 0;
+    flex-shrink: 0;
+    display: block;
+    width: 14px;
+    height: 14px;
+    background-color: $base-accent;
+    border-radius: 7px;
+  }
+
+  @media (min-width: $tablet-width) {
+    padding-left: 0;
+    gap: 19px;
+
+    &::after {
+      display: none;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 10px;
+    padding-bottom: 38px;
+    gap: 10px;
+
+    &::after {
+      display: block;
+      top: unset;
+      left: 20px;
+      bottom: 0;
+    }
+  }
+}
