--- a/source/sass/blocks/adv.scss
+++ b/source/sass/blocks/adv.scss
@@ -1,9 +1,51 @@
 // .adv {}
-// .adv__container {}
-// .adv__title {}
+.adv__container {
+  padding-top: 36px;
+  padding-bottom: 20px;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 60px;
+    padding-bottom: 40px;
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-top: 175px;
+    padding-bottom: 100px;
+  }
+}
+
+.adv__title {
+  margin: 0;
+  margin-bottom: 37px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 60px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin-bottom: 50px;
+  }
+}
+
 // .adv__swiper {}
-// .adv__swiper-wrapper {}
-// .adv__slide {}
+.adv__swiper-wrapper {
+  display: grid;
+  gap: 15px;
+
+  @media (min-width: $tablet-width) {
+    grid-template-columns: 1fr 1fr;
+    gap: 30px;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: block;
+  }
+}
+
+.adv__slide:last-child {
+  grid-column: span 2;
+  justify-self: center;
+}
 // .adv__button {
 // &--prev {}
 // &--next {}
