--- a/source/sass/blocks/adv.scss
+++ b/source/sass/blocks/adv.scss
@@ -30,6 +30,7 @@
 // .adv__swiper {}
 .adv__swiper-wrapper {
   display: grid;
+  grid-template-columns: 1fr;
   gap: 15px;
 
   @media (min-width: $tablet-width) {
@@ -43,8 +44,14 @@
 }
 
 .adv__slide:last-child {
-  grid-column: span 2;
-  justify-self: center;
+  @media (min-width: $tablet-width) {
+    grid-column: span 2;
+    justify-self: center;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: unset;
+  }
 }
 // .adv__button {
 // &--prev {}
