--- a/source/sass/blocks/form-field.scss
+++ b/source/sass/blocks/form-field.scss
@@ -1,10 +1,35 @@
-// .form-field {
-// &--phone {}
-// &--email {}
-// }
-// .form-field__inp {}
+.form-field {
+  position: relative;
+  display: flex;
+
+  @media (min-width: $tablet-width) {
+    width: 360px;
+  }
+}
+
+.form-field__inp {
+  flex-grow: 1;
+  padding: 17px 15px;
+  border-radius: 2px;
+
+  @media (min-width: $tablet-width) {
+    padding: 20px 30px;
+  }
+}
+
 .form-field__name {
+  position: absolute;
+  left: 15px;
+  top: 50%;
+  transform: translate(0, -50%);
+  color: $base-dark;
   font-size: 16px;
   line-height: 16px;
+  opacity: 0.5;
+
+  @media (min-width: $tablet-width) {
+    left: 30px;
+  }
 }
+
 // .form-field__error {}
