--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,6 +1,100 @@
 // .contacts {}
-// .contacts__container {}
-// .contacts__title {}
-// .contacts p {}
-// .contacts__list {}
+.contacts__container {
+  padding-top: 36px;
+  padding-bottom: 20px;
+
+  @media (min-width: $tablet-width) {
+    padding-top: 60px;
+    padding-bottom: 40px;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: grid;
+    grid-template-columns: 500px 600px;
+    gap: 0 100px;
+    padding-top: 119px;
+    padding-bottom: 95px;
+  }
+}
+
+.contacts__title {
+  margin: 0;
+  margin-bottom: 29px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 20px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1/2;
+    margin-bottom: 25px;
+  }
+}
+
+.contacts p {
+  margin: 0;
+  margin-bottom: 30px;
+
+  @media (min-width: $tablet-width) {
+    margin-bottom: 40px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1/2;
+    margin-bottom: 50px;
+  }
+}
+
+.contacts__list {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  margin: 0;
+  margin-bottom: 30px;
+
+  @media (min-width: $tablet-width) {
+    flex-direction: row;
+    gap: 40px;
+    margin-bottom: 40px;
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 1/2;
+    flex-direction: column;
+    gap: 35px;
+  }
+}
+
 // .contacts__item {}
+
+.contacts__map-wrapper {
+  width: 100vw;
+  height: 343px;
+  margin-left: calc(-1 * ((100vw - $mobile-width) / 2) - 15px);
+  margin-right: calc(-1 * ((100vw - $mobile-width) / 2) - 15px);
+  overflow: hidden;
+
+  @media (min-width: $tablet-width) {
+    height: 340px;
+  margin-left: calc(-1 * ((100vw - $tablet-width) / 2) - 45px);
+  margin-right: calc(-1 * ((100vw - $tablet-width) / 2) - 45px);
+  }
+
+  @media (min-width: $desktop-width) {
+    grid-column: 2/3;
+    grid-row: 1/4;
+    align-self: center;
+    width: 600px;
+    height: 324px;
+    margin: 0;
+    overflow: unset;
+  }
+}
+
+.contacts__map-wrapper img {
+  object-fit: cover;
+  object-position: center;
+  height: 100%;
+  max-width: 100%;
+  min-width: 100%;
+}
