--- a/source/sass/blocks/contact.scss
+++ b/source/sass/blocks/contact.scss
@@ -1,8 +1,70 @@
-// .contact {}
+.contact {
+  position: relative;
+  padding-left: 32px;
+
+  &::before {
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: "";
+    display: block;
+    width: 22px;
+    height: 22px;
+    background-size: 22px 22px;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
+
+  &--phone::before {
+    background-image: url("/__spritemap#sprite-phone-view");
+  }
+
+  &--mail::before {
+    background-size: 20px 14px;
+    background-image: url("/__spritemap#sprite-mail-view");
+  }
+
+  &--address::before {
+    background-image: url("/__spritemap#sprite-pin-view");
+  }
+
+  @media (min-width: $tablet-width) {
+    &::before {
+      width: 24px;
+      height: 24px;
+      background-size: 24px 24px;
+    }
+
+    &--mail::before {
+      background-size: 22px 15px;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    padding-left: 56px;
+
+    &::before {
+      top: 50%;
+      transform: translate(0, -50%);
+      width: 26px;
+      height: 26px;
+      background-size: 26px 26px;
+    }
+
+    &--mail::before {
+      background-size: 24px 17px;
+    }
+  }
+}
+
 .contact__name {
+  margin-bottom: 8px;
+
   @include font-set(14px, 14px, 600);
 
   @media (min-width: $tablet-width) {
+    margin-bottom: 6px;
+
     font-size: 16px;
     line-height: 16px;
   }
@@ -14,6 +76,8 @@
 }
 
 .contact__value {
+  margin: 0;
+
   @media (min-width: $tablet-width) {
     font-size: 14px;
     line-height: 22px;
