--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -16,4 +16,5 @@ $promo-ovelay: linear-gradient(45deg, rgba(15, 20, 41, 0.33) 0%, rgba(15, 20, 41
 $tour-ovelay: linear-gradient(to bottom, #ffffff 0%, rgba(0, 0, 0, 0.6) 100%);
 // other
 $base-border-color: rgba(45, 56, 63, 0.3);
+$lighter-border-color: rgba(45, 56, 63, 0.2);
 $accent-border-color: rgba(2, 102, 193, 0.1);
