--- a/source/sass/blocks/adv-slide.scss
+++ b/source/sass/blocks/adv-slide.scss
@@ -10,6 +10,7 @@
   text-align: center;
 
   border: 1px solid $accent-border-color;
+  background-color: $base-light;
 
   &::before {
     content: "";
