--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -1,4 +1,24 @@
-// .reviews {}
+.reviews {
+  @media (min-width: $desktop-width) {
+    background-image: url(../../img/decoration/clouds-3-l.png);
+    background-size: 1440px 447px;
+    background-position: left bottom 281px;
+    background-repeat: no-repeat;
+
+    @supports (background-image: url("../../img/decoration/clouds-3-l.webp")) {
+      background-image: url("../../img/decoration/clouds-3-l.webp");
+    }
+
+    @media (resolution >=2dppx) {
+      background-image: url("../../img/decoration/clouds-3-2x-l.png");
+
+      @supports (background-image: url("../../img/decoration/clouds-3-2x-l.webp")) {
+        background-image: url("../../img/decoration/clouds-3-2x-l.webp");
+      }
+    }
+  }
+}
+
 .reviews__container {
   padding-top: 36px;
   padding-bottom: 20px;
