--- a/source/sass/blocks/training.scss
+++ b/source/sass/blocks/training.scss
@@ -1,4 +1,43 @@
-// .training {}
+.training {
+  @media (min-width: $tablet-width) {
+    background-image: url(../../img/decoration/clouds-2-m.png);
+    background-size: 465px 280px;
+    background-position: right bottom 158px;
+    background-repeat: no-repeat;
+
+    @supports (background-image: url("../../img/decoration/clouds-2-m.webp")) {
+      background-image: url("../../img/decoration/clouds-2-m.webp");
+    }
+
+    @media (resolution >=2dppx) {
+      background-image: url("../../img/decoration/clouds-2-2x-m.png");
+
+      @supports (background-image: url("../../img/decoration/clouds-2-2x-m.webp")) {
+        background-image: url("../../img/decoration/clouds-2-2x-m.webp");
+      }
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    background-image: url(../../img/decoration/clouds-2-l.png);
+    background-size: 633px 280px;
+    background-position: right bottom -4px;
+    background-repeat: no-repeat;
+
+    @supports (background-image: url("../../img/decoration/clouds-2-l.webp")) {
+      background-image: url("../../img/decoration/clouds-2-l.webp");
+    }
+
+    @media (resolution >=2dppx) {
+      background-image: url("../../img/decoration/clouds-2-2x-l.png");
+
+      @supports (background-image: url("../../img/decoration/clouds-2-2x-l.webp")) {
+        background-image: url("../../img/decoration/clouds-2-2x-l.webp");
+      }
+    }
+  }
+}
+
 .training__container {
   padding-top: 36px;
   padding-bottom: 20px;
