--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -1,5 +1,42 @@
 // .hero {}
-// .hero__swiper {}
-// .hero__swiper-wrapper {}
+.hero__swiper {
+  position: relative;
+}
+.hero__swiper-wrapper {
+  max-width: 320px;
+
+  @media (min-width: $tablet-width) {
+    min-width: 768px;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-width: 1440px;
+  }
+}
 // .hero__slide {}
-// .hero__pagination {}
+.hero__pagination {
+  display: none;
+
+  @media (min-width: $desktop-width) {
+    position: absolute;
+    z-index: 1;
+    bottom: 92px;
+    right: 0;
+    transform: translate(calc((((100vw - $desktop-width) / 2) + 120px) * -1), 0);
+    display: flex;
+    gap: 20px;
+  }
+}
+
+.hero__pagination-bullet {
+  display: block;
+  width: 20px;
+  height: 20px;
+  border: 1px solid $base-light;
+  border-radius: 10px;
+  cursor: pointer;
+
+  &--is-active {
+    background-color: $base-light;
+  }
+}
