--- a/source/sass/blocks/promo-slide.scss
+++ b/source/sass/blocks/promo-slide.scss
@@ -203,6 +203,6 @@
   object-fit: cover;
   object-position: center;
   height: 100%;
-  max-width: 100%;
-  min-width: 100%;
+  max-width: 100vw;
+  min-width: 100vw;
 }
