--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -19,6 +19,7 @@
 @import "./blocks/visually-hidden.scss";
 
 // STRUCTURE
+@import "./blocks/page-body.scss";
 @import "./blocks/header.scss";
 @import "./blocks/page-main.scss";
 @import "./blocks/main-nav.scss";
