--- a/source/sass/blocks/tour-slide.scss
+++ b/source/sass/blocks/tour-slide.scss
@@ -120,6 +120,7 @@
   display: flex;
   flex-direction: column;
   gap: 7px;
+  justify-content: space-between;
 }
 
 .tour-slide__requirement-term {
@@ -133,7 +134,7 @@
   &--difficulty {
     display: flex;
     height: 16px;
-    width: 84px;
+    width: 80px;
     --count-star: 1;
 
     &::before,
