--- a/source/sass/blocks/about.scss
+++ b/source/sass/blocks/about.scss
@@ -61,7 +61,7 @@
   @include font-set(22px, 22px, 800);
 
   &::before {
-    content: "Авава";
+    content: attr(data-text);
     position: absolute;
     left: 0;
     bottom: 12px;
@@ -91,7 +91,7 @@
     &::before {
       font-size: 55px;
       line-height: 55px;
-      bottom: 0;
+      bottom: 25px;
     }
   }
 }
