--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -42,6 +42,12 @@
   @media (min-width: $tablet-width) {
     margin-bottom: -35px;
   }
+
+  @media (min-width: $desktop-width) {
+    &::before {
+      bottom: 25px;
+    }
+  }
 }
 
 .reviews__swiper {
