--- a/source/sass/blocks/tours.scss
+++ b/source/sass/blocks/tours.scss
@@ -128,6 +128,31 @@
   @include link-default;
   @include font-set(14px, 14px, 700);
 
+  &:hover {
+    color: $accent-border-color;
+    outline: none;
+  }
+
+  &:focus {
+    outline: none;
+  }
+
+  &:focus-visible {
+    color: $base-accent;
+    outline: none;
+  }
+
+  &:active {
+    color: $darker-accent;
+    outline: none;
+  }
+
+  &:disabled,
+  &--disabled {
+    color: $base-disabled;
+    outline: none;
+  }
+
   @media (min-width: $tablet-width) {
     font-size: 16px;
     line-height: 16px;
