--- a/source/sass/common/variables.scss
+++ b/source/sass/common/variables.scss
@@ -18,3 +18,8 @@ $tour-ovelay: linear-gradient(to bottom, #ffffff 0%, rgba(0, 0, 0, 0.6) 100%);
 $base-border-color: rgba(45, 56, 63, 0.3);
 $lighter-border-color: rgba(45, 56, 63, 0.2);
 $accent-border-color: rgba(2, 102, 193, 0.1);
+$darker-accent: #1c3374;
+$base-disabled: #999999;
+$second-gray: #d9d9d9;
+$light-05: rgba(255, 255, 255, 0.5);
+$error: #ff121f
