--- a/source/sass/blocks/hero.scss
+++ b/source/sass/blocks/hero.scss
@@ -39,4 +39,34 @@
   &--is-active {
     background-color: $base-light;
   }
+
+  &:hover {
+    background-color: $second-gray;
+  }
+
+  &:focus {
+    outline: none;
+  }
+
+  &:focus-visible {
+    position: relative;
+    outline: none;
+
+    &::after {
+      content: "";
+      display: block;
+      position: absolute;
+      top: -3px;
+      left: -3px;
+      width: 24px;
+      height: 24px;
+      background-color: transparent;
+      border: 1px solid $light-05;
+      border-radius: 11px;
+    }
+  }
+
+  &:active {
+    background-color: $light-05;
+  }
 }
