--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -56,17 +56,66 @@
   @media (min-width: $tablet-width) {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 10px;
   }
 
   @media (min-width: $desktop-width) {
-    gap: 30px;
+    gap: 20px;
   }
 }
 
-// .main-footer__item {}
+.main-footer__item {
+  @media (min-width: $desktop-width) {
+    position: relative;
+
+    &:has(.main-nav__link:hover) {
+      &::after {
+        content: "";
+        position: absolute;
+        bottom: -3px;
+        left: 0;
+        right: 0;
+        display: block;
+        height: 1px;
+        width: 100%;
+        background-color: $base-light;
+      }
+    }
+  }
+}
+
 .main-footer__link {
   @include link-default;
+
+  &:hover {
+    color: $base-dark;
+    outline: none;
+  }
+
+  &:focus {
+    outline: none;
+  }
+
+  &:focus-visible {
+    color: $base-dark;
+    outline: 1px solid $base-dark;
+    outline-offset: 3px 5px;
+  }
+
+  &:active {
+    color: $darker-accent;
+    outline: none;
+  }
+
+  &:disabled,
+  &--disabled {
+    color: $base-disabled;
+    outline: none;
+  }
+
+  @media (min-width: $tablet-width) {
+    padding: 0 5px;
+  }
 }
 
 .main-footer__phone {
@@ -74,6 +123,31 @@
 
   @include link-default;
   @include font-set(18px, 18px, 600);
+
+  &:hover {
+    color: $accent-border-color;
+    outline: none;
+  }
+
+  &:focus {
+    outline: none;
+  }
+
+  &:focus-visible {
+    color: $base-accent;
+    outline: none;
+  }
+
+  &:active {
+    color: $darker-accent;
+    outline: none;
+  }
+
+  &:disabled,
+  &--disabled {
+    color: $base-disabled;
+    outline: none;
+  }
 
   @media (min-width: $desktop-width) {
     display: block;
@@ -92,6 +166,31 @@
 .main-footer__privacy {
   @include link-default;
   @include font-set(12px, 12px, 300);
+
+  &:hover {
+    color: $accent-border-color;
+    outline: none;
+  }
+
+  &:focus {
+    outline: none;
+  }
+
+  &:focus-visible {
+    color: $base-accent;
+    outline: none;
+  }
+
+  &:active {
+    color: $darker-accent;
+    outline: none;
+  }
+
+  &:disabled,
+  &--disabled {
+    color: $base-disabled;
+    outline: none;
+  }
 
   @media (min-width: $tablet-width) {
     grid-column: 1/-1;
