--- a/source/sass/blocks/primary-button.scss
+++ b/source/sass/blocks/primary-button.scss
@@ -10,4 +10,33 @@
 
   @include link-default;
   @include font-set(16px, 16px, 500);
+
+  &:hover {
+    background-color: $base-light;
+    color: $darker-accent;
+    outline: 1px solid $darker-accent;
+  }
+
+  &:focus {
+    outline: none;
+  }
+
+  &:focus-visible {
+    background-color: $base-light;
+    color: $darker-accent;
+    outline: none;
+  }
+
+  &:active {
+    background-color: $darker-accent;
+    color: $base-light;
+    outline: none;
+  }
+
+  &:disabled,
+  &--disabled {
+    background-color: $base-disabled;
+    color: $base-light;
+    outline: none;
+  }
 }
