--- a/source/sass/blocks/primary-slider-button.scss
+++ b/source/sass/blocks/primary-slider-button.scss
@@ -8,8 +8,33 @@
     transform: rotate(180deg);
   }
 
+  &:hover {
+    background-color: $base-light;
+    color: $darker-accent;
+    outline: 1px solid $darker-accent;
+  }
+
+  &:focus {
+    outline: none;
+  }
+
+  &:focus-visible {
+    background-color: $base-light;
+    color: $darker-accent;
+    outline: none;
+  }
+
+  &:active {
+    background-color: $darker-accent;
+    color: $base-light;
+    outline: none;
+  }
+
+  &:disabled,
   &--disabled {
-    background-color: #999999;
+    background-color: $base-disabled;
+    color: $base-light;
+    outline: none;
   }
 
   &::after {
